--- a/demo.html
+++ b/demo.html
@@ -4,12 +4,12 @@
 	<title>Verkiezings Uitslagen in D3</title>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script src="https://d3js.org/d3-transition.v1.min.js"></script>
-	<link rel="stylesheet" href="main.css"/>
+	<link rel="stylesheet" href="demo.css"/>
 </head>
 <body>
 	<h1>Verkiezings uitslagen</h1>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<script src="main.js"></script>
+	<script src="demo.js"></script>
 
 </body>
 </html>
