--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="demo.css"/>
 </head>
 <body>
-	<h1>Verkiezings uitslagen</h1>
+	<h1>Verkiezings uitslagen 1994</h1>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script src="demo.js"></script>
 
